--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -4,9 +4,10 @@
 
 <form role="form" ng-submit="login()">
 	<div class="form-group">
-		<label for="username">Username</label>
-		<input type="text" ng-model="user.name" class="form-control" id="username" placeholder="Username">
-		<input type="password" ng-model="user.password" class="form-control" id="password" placeholder="Password">
+		<label for="username">TC Kimlik No</label>
+		<!--<input type="text" ng-model="user.name" class="form-control" id="username" placeholder="Username">-->
+        <input type="text" ng-model="user.kimlikno" class="form-control" id="kimlik" placeholder="Kimlik No" ng-pattern="/^[0-9]{11}$/">
+		<!--<input type="password" ng-model="user.password" class="form-control" id="password" placeholder="Password">-->
 	</div>
 	
 	
