--- a/public/partials/success.html
+++ b/public/partials/success.html
@@ -12,6 +12,7 @@
 <div class="row">
     <div class="col-xs-6">
         <button class="btn btn-primary pull-right" ng-click="logout()">Logout &raquo;</button>
+        <button class="btn btn-primary pull-right" ng-click="connect()">Connect &raquo;</button>
     </div>
 </div>
 	
