--- a/views/index.jade
+++ b/views/index.jade
@@ -15,9 +15,10 @@ html(lang='en', ng-app='polls')
         script(src='/javascripts/services.js')
         script(src='/javascripts/controllers.js')
         script(src='/javascripts/validators.js')
+        script(src='/socket.io/socket.io.js')
     body(ng-controller="PollListCtrl")
         nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
             div.navbar-header
-                a.navbar-brand(href='#/polls') Polls
+                a.navbar-brand(href='#/login') Korugan 
         div.container
             div(ng-view)
