--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -2,11 +2,11 @@
 	<h1>Login Page</h1>
 </div>
 
-<form role="form" ng-submit="login()">
+<form role="form" ng-submit="login()" name="authform">
 	<div class="form-group">
 		<label for="username">TC Kimlik No</label>
 		<!--<input type="text" ng-model="user.name" class="form-control" id="username" placeholder="Username">-->
-        <input type="text" ng-model="user.kimlikno" class="form-control" id="kimlik" placeholder="Kimlik No" ng-pattern="/^[0-9]{11}$/">
+        <input type="text" ng-model="user.kimlikno" kimlikno required class="form-control" id="kimlik" placeholder="Kimlik No" ng-pattern="/^[0-9]{11}$/">
 		<!--<input type="password" ng-model="user.password" class="form-control" id="password" placeholder="Password">-->
 	</div>
 	
@@ -15,7 +15,7 @@
 	
 	<div class="row">
 		<div class="col-xs-6">
-			<button class="btn btn-primary pull-right" type="submit">Login &raquo;</button>
+			<button class="btn btn-primary pull-right" type="submit" ng-disabled="authform.$invalid">Login &raquo;</button>
 		</div>
 	</div>
 	
