--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -2,13 +2,13 @@
 	<h1>Login Page</h1>
 </div>
 
-<form role="form" ng-submit="login()" name="authform">
+<form role="form" ng-submit="login()" name="authform" ng-init="init()">
 	<!--<div class="form-group" ng-style="{ width: '15%' }">-->
 	<div class="form-group">
-		<label for="username">TC Kimlik No</label>
-		<!--<input type="text" ng-model="user.name" class="form-control" id="username" placeholder="Username">-->
-        <input  type="text" ng-model="user.kimlikno" kimlikno required class="form-control" id="kimlik" placeholder="Kimlik No" ng-pattern="/^[0-9]{11}$/" >
-		<!--<input type="password" ng-model="user.password" class="form-control" id="password" placeholder="Password">-->
+	    <label for="username">Username</label>
+            <input  type="text" ng-model="user.name" required class="form-control" id="name" placeholder="Username" ng-style="{ width: '30%' }">
+	    <label for="password">Password</label>
+            <input type="password" ng-model="user.password" required class="form-control" id="password" placeholder="Password" ng-style="{ width: '30%' }">
 	</div>
 	
 	
