--- a/views/index.jade
+++ b/views/index.jade
@@ -10,15 +10,18 @@ html(lang='en', ng-app='polls')
         #script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js')
         script(src='/externals/angular.min.js')
         #script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular-resource.min.js')
+        script(src='//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js')
+        script(src='//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.js')
         script(src='/externals/angular-resource.min.js')
+        script(src='/externals/angular-route.js')
+        script(src='/externals/ui-bootstrap-tpls-0.11.0.min.js')
         script(src='/javascripts/app.js')
         script(src='/javascripts/services.js')
         script(src='/javascripts/controllers.js')
         script(src='/javascripts/validators.js')
-        script(src='/socket.io/socket.io.js')
     body(ng-controller="InitCtrl", ng-init="init()")
         nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
             div.navbar-header
-                a.navbar-brand(href='#/login') Korugan 
+                a.navbar-brand(href='#/login') MyDLP License Control 
         div.container
             div(ng-view)
